# MiniTicTacToe

./: CMakeCache.txt  Makefile  README.md  client  cmake_install.cmake  server
src/: CMakeLists.txt
src/client/: client.cpp  mainClient.cpp
src/header/: client.h  tictactoe.h
src/header/tictactoe/: tictactoe.h
src/server/: server.cpp
src/tictactoe/: tictactoe.cpp
